--- a/client/site.css
+++ b/client/site.css
@@ -122,12 +122,12 @@ textarea {
    .cy-row{
     flex: 2;
   }
-/*
-  .cy-container{
+
+  /*.cy-container{
     display:flex;
     flex-flow: column;
     height: 100%;
-  }  */
+  }*/
   .cy-container{
     flex:1;
   }
