Colour and isprimary

--- a/client/site.css
+++ b/client/site.css
@@ -72,6 +72,7 @@ textarea {
     font-weight: 300;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serf;
     font-size: 14px;
+    color: --vscode-editor-foreground;
   }
 
   .node rect {
