--- a/client/site.css
+++ b/client/site.css
@@ -123,12 +123,12 @@ textarea {
    .cy-row{
     flex: 2;
   }
-
-  /*.cy-container{
+/*
+  .cy-container{
     display:flex;
     flex-flow: column;
     height: 100%;
-  }*/
+  } */
   .cy-container{
     flex:1;
   }
