--- a/client/site.css
+++ b/client/site.css
@@ -1,37 +1,22 @@
-html, body, .viewport {
-  width: 100%;
+ html {
   height: 100%;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+body,
+.flex-body {
+  display: flex;
+  flex: 1;/* no need anymore to deal with height/width */
+  flex-direction: column;
 }
 
-.vbox {
-
-  /* current syntax */
-  display: -webkit-flex;
-  display:    -moz-flex;
-  display:     -ms-flex;
-  display:         flex;
-
-  -webkit-flex-direction: column;
-     -moz-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.hbox{
-  display: -webkit-flex;
-  display:    -moz-flex;
-  display:     -ms-flex;
-  display:         flex;
-
-  -webkit-flex-direction: row;
-     -moz-flex-direction: row;
-      -ms-flex-direction: row;
-          flex-direction: row;
+.viewport {
+  display: flex;
+  flex: 1;
 }
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
-.body-content {
+ .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -115,20 +100,12 @@ textarea {
     border: 1px solid #ddd;
     border-radius: 0.25em;
     margin:0.25em;
-  }
-.cy-details{
-  overflow-y:scroll;
-  flex: 1;
-}
-   .cy-row{
-    flex: 2;
-  }
-/*
-  .cy-container{
-    display:flex;
-    flex-flow: column;
-    height: 100%;
-  } */
-  .cy-container{
+    position: relative;
     flex:1;
+  }
+  .cy-container{
+     flex:1;
+        flex-direction: row;
+        display: flex
+
   }
