--- a/client/site.css
+++ b/client/site.css
@@ -109,3 +109,9 @@ textarea {
         display: flex
 
   }
+  .cwtools-text-center {
+    text-align: center
+  }
+  .cwtools-table {
+    width: 100%
+  }
